@@ -1,5 +1,10 @@
 2010-07-10  David Reveman  <davidr@novell.com>
 
+	* frameworkelement.cpp:
+	* uielement.cpp:
+	* rect.cpp:
+	* rect.h: Add Rect::Transform (double *projection).
+
 	* frameworkelement.cpp (ComputeGlobalBounds):
 	* uielement.cpp:
 	* uielement.h: Add effect_padding to UIElement class.
